--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "moment": "^2.10.6",
     "rc": "~0.5.0",
     "sails": "~0.11.3",
     "sails-disk": "~0.10.0",
+    "sails-postgresql": "^0.10.17",
     "waterlock": "^0.1.2-rc1",
     "waterlock-local-auth": "^0.1.2-rc1"
   },
