--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "url": "git://github.com/scott-w/reps-js.git"
   },
   "author": "Scott Walton",
-  "license": "BSD"
+  "license": "BSD",
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4"
+  }
 }
