--- a/package.json
+++ b/package.json
@@ -5,27 +5,9 @@
   "description": "A web app for tracking workouts, reps, weights etc",
   "keywords": [],
   "dependencies": {
-    "ejs": "~0.8.4",
-    "grunt": "0.4.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-less": "0.11.1",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt-sync": "~0.0.4",
-    "include-all": "~0.1.3",
-    "moment": "^2.10.6",
-    "rc": "~0.5.0",
-    "sails": "~0.11.3",
-    "sails-disk": "~0.10.0",
-    "sails-postgresql": "^0.10.17",
-    "waterlock": "^0.1.2-rc1",
-    "waterlock-local-auth": "^0.1.2-rc1"
+    "hapi": "^12.0.1",
+    "sequelize": "^3.17.1",
+    "validator": "^4.5.0"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -40,12 +22,6 @@
   "author": "Scott Walton",
   "license": "BSD",
   "devDependencies": {
-    "async": "^1.5.0",
-    "barrels": "^1.6.2",
-    "chai": "^3.4.1",
-    "lodash": "^3.10.1",
-    "mocha": "^2.3.4",
-    "sails-memory": "^0.10.5",
-    "supertest": "^1.1.0"
+    "mocha": "^2.3.4"
   }
 }
