--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Scott Walton",
   "license": "BSD",
   "devDependencies": {
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "sequelize-cli": "^2.3.0"
   }
 }
