--- a/api/config/config.json
+++ b/api/config/config.json
@@ -4,20 +4,20 @@
     "password": "password",
     "database": "workouts",
     "host": "127.0.0.1",
-    "dialect": "pg"
+    "dialect": "postgres"
   },
   "test": {
     "username": "scott",
     "password": "password",
     "database": "test_workouts",
     "host": "127.0.0.1",
-    "dialect": "pg"
+    "dialect": "postgres"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "pg"
+    "dialect": "postgres"
   }
 }
