--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "description": "A web app for tracking workouts, reps, weights etc",
   "keywords": [],
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "hapi": "^12.0.1",
+    "hapi-auth-jwt2": "^5.3.2",
     "pg": "^4.4.3",
     "sequelize": "^3.17.1",
     "validator": "^4.5.0"
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js",
+    "start": "node --harmony app.js",
     "migrate": "sequelize db:migrate",
     "test": "mocha test/bootstrap.test.js test/unit/**/*.test.js"
   },
