--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^0.8.5",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
+    "jsonwebtoken": "^5.5.4",
     "pg": "^4.4.3",
     "sequelize": "^3.17.1",
     "validator": "^4.5.0"
