--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
     "jsonwebtoken": "^5.5.4",
+    "lodash": "^4.1.0",
     "pg": "^4.4.3",
     "sequelize": "^3.17.1",
     "validator": "^4.5.0"
