--- a/config/config.json
+++ b/config/config.json
@@ -19,5 +19,12 @@
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
+  },
+  "ci": {
+    "username": "ubuntu",
+    "password": null,
+    "database": "circle_test",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
   }
 }
