--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "debug": "node debug app.js",
     "start": "node --harmony app.js",
     "migrate": "sequelize db:migrate",
-    "test": "NODE_ENV=test sequelize db:migrate && lab"
+    "test": "sequelize db:migrate && lab"
   },
   "main": "app.js",
   "repository": {
