--- a/config/config.json
+++ b/config/config.json
@@ -6,7 +6,7 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
-  "test": {
+  "devtest": {
     "username": "scott",
     "password": "password",
     "database": "test_workouts",
@@ -20,7 +20,7 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
-  "ci": {
+  "test": {
     "username": "ubuntu",
     "password": null,
     "database": "circle_test",
