--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hapi-auth-jwt2": "^5.3.2",
     "jsonwebtoken": "^5.5.4",
     "lodash": "^4.1.0",
+    "moment": "^2.11.2",
     "pg": "^4.4.3",
     "sequelize": "^3.17.1",
     "validator": "^4.5.0"
@@ -33,6 +34,7 @@
     "lab": "^8.2.0",
     "mocha": "^2.3.4",
     "sequelize-cli": "^2.3.0",
-    "sequelize-fixtures": "^0.4.8"
+    "sequelize-fixtures": "^0.4.8",
+    "shot": "^3.0.0"
   }
 }
