--- a/fixtures/workouts.yaml
+++ b/fixtures/workouts.yaml
@@ -6,6 +6,14 @@ fixtures:
       password: password
       first_name: Test
       last_name: User
+  - model: User
+    data:
+      id: 2
+      email: test2@example.com
+      password: password123
+      first_name: Other
+      last_name: User2
+
 
   - model: Location
     data:
@@ -18,3 +26,10 @@ fixtures:
       userId: 1
       locationId: 1
       workout_date: 2016-01-10
+
+  - model: Workout
+    data:
+      id: 2
+      userId: 2
+      locationId: 1
+      workout_date: 2016-01-06
