Chopped up the models #11
Redid the models to use the built-in sequelize foreign key relations.

--- a/fixtures/workouts.yaml
+++ b/fixtures/workouts.yaml
@@ -23,13 +23,13 @@ fixtures:
   - model: Workout
     data:
       id: 1
-      userId: 1
-      locationId: 1
+      UserId: 1
+      LocationId: 1
       workout_date: 2016-01-10
 
   - model: Workout
     data:
       id: 2
-      userId: 2
-      locationId: 1
+      UserId: 2
+      LocationId: 1
       workout_date: 2016-01-06
