--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "author": "Scott Walton",
   "license": "BSD",
   "devDependencies": {
+    "bluebird": "^3.2.2",
     "code": "^2.1.0",
     "lab": "^8.2.0",
     "mocha": "^2.3.4",
     "sequelize-cli": "^2.3.0",
     "sequelize-fixtures": "^0.4.8",
-    "shot": "^3.0.0"
+    "shot": "^3.0.0",
+    "sinon": "^1.17.3"
   }
 }
