Apply Sets to existing workouts #17
Added the code and tests for updating existing workouts with Sets.

--- a/fixtures/workouts.yaml
+++ b/fixtures/workouts.yaml
@@ -46,3 +46,11 @@ fixtures:
       machine_code: "134"
       Location:
         name: Test Location
+
+  - model: Set
+    data:
+      WorkoutId: 1
+      Exercise:
+        exercise_name: Bench Press
+      weight: 50Kg
+      reps: 6
