--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "description": "A web app for tracking workouts, reps, weights etc",
   "keywords": [],
   "dependencies": {
+    "backbone": "^1.2.3",
+    "backbone.babysitter": "^0.1.10",
+    "backbone.marionette": "^3.0.0",
+    "backbone.radio": "^1.0.2",
     "bcrypt": "^0.8.5",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
@@ -13,7 +17,10 @@
     "moment": "^2.11.2",
     "pg": "^4.4.3",
     "sequelize": "^3.17.1",
-    "validator": "^4.5.0"
+    "underscore": "1.8.3",
+    "underscore-template-loader": "^0.6.0",
+    "validator": "^4.5.0",
+    "webpack": "^1.12.13"
   },
   "scripts": {
     "debug": "node debug app.js",
