--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^0.8.5",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
+    "jquery": "^2.2.0",
     "jsonwebtoken": "^5.5.4",
     "lodash": "^4.1.0",
     "moment": "^2.11.2",
@@ -27,6 +28,8 @@
     "start": "node --harmony app.js",
     "migrate": "sequelize db:migrate",
     "fulltest": "sequelize db:migrate && lab",
+    "build": "webpack",
+    "watch": "webpack -w",
     "test": "lab -e $NODE_ENV"
   },
   "main": "app.js",
@@ -37,6 +40,9 @@
   "author": "Scott Walton",
   "license": "BSD",
   "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
     "bluebird": "^3.2.2",
     "code": "^2.1.0",
     "lab": "^8.2.0",
