--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "backbone": "^1.2.3",
     "backbone.babysitter": "^0.1.10",
     "backbone.radio": "^1.0.2",
+    "backbone.syphon": "^0.6.3",
     "bcrypt": "^0.8.5",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
