--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "start": "node --harmony app.js",
     "migrate": "sequelize db:migrate",
     "fulltest": "sequelize db:migrate && lab",
+    "serveassets": "http-server ./assets",
     "build": "webpack",
     "watch": "webpack -w",
     "test": "lab -e $NODE_ENV"
@@ -46,6 +47,8 @@
     "babel-preset-es2015": "^6.5.0",
     "bluebird": "^3.2.2",
     "code": "^2.1.0",
+    "http-proxy": "^1.13.1",
+    "http-server": "^0.8.5",
     "lab": "^8.2.0",
     "mocha": "^2.3.4",
     "sequelize-fixtures": "^0.4.8",
