--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "backbone": "^1.2.3",
     "backbone.babysitter": "^0.1.10",
+    "backbone.localstorage": "^1.1.16",
     "backbone.radio": "^1.0.2",
     "backbone.syphon": "^0.6.3",
     "bcrypt": "^0.8.5",
