Auto-redirect to workouts
Redirect logged-in users to the workouts screen.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "serveassets": "http-server ./assets",
     "proxy": "node proxy.js",
     "build": "webpack",
+    "compile": "webpack -p",
     "watch": "webpack -w",
     "test": "lab -e $NODE_ENV"
   },
