A simple add a session with a date #26
Add a session with a date. I’ve made the location optional for now -
I’m not entirely convinced it’s necessary for users of the app.

--- a/fixtures/workouts.yaml
+++ b/fixtures/workouts.yaml
@@ -33,6 +33,12 @@ fixtures:
         name: Test Location
       workout_date: 2016-01-06
 
+  - model: Workout
+    data:
+      User:
+        email: test@example.com
+      workout_date: 2016-01-02
+
   - model: Exercise
     data:
       exercise_name: Bench Press
