Wrote up the fetch for exercise IDs #28
I’ve written up a fetch method for pulling exercise IDs for Sets.

I’ve started a test but, for some reason, `$.ajax` stays `undefined` so
I’ll need to find a way to execute the code I need.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "webpack",
     "compile": "webpack -p",
     "watch": "webpack -w",
-    "test": "lab -T ./babelcompiler.js -I window,localStorage,__core-js_shared__ -e $NODE_ENV "
+    "test": "lab -T ./babelcompiler.js -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV "
   },
   "main": "app.js",
   "repository": {
