Used the mock-browser to get jquery.ajax to work #28

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,8 @@
     "module": false,
     "console": false,
     "window": false,
-    "exports": false
+    "exports": false,
+    "global": false
   },
   "strict": "implied",
   "unused": true,
