Update the DB connection to use the env

--- a/config/config.json
+++ b/config/config.json
@@ -14,11 +14,7 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "use_env_variable": "DB_CONNECTION_URL"
   },
   "ci": {
     "username": "ubuntu",
