Accept matches real-life headers

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -30,7 +30,7 @@ server {
 		proxy_set_header X-Forwarded-Proto https;
 		proxy_set_header X-Real-IP $remote_addr;
 
-		if ($http_accept = "application/json") {
+		if ($http_accept ~* ".*application/json.*") {
 			proxy_pass http://localhost:3000;
 			break;
 		}
