--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sequelize-cli": "^2.3.0",
     "underscore": "1.8.3",
     "underscore-template-loader": "^0.6.0",
+    "validate.js": "^0.9.0",
     "validator": "^4.5.0",
     "webpack": "^1.12.13"
   },
