Secure the user's data by scrubbing local storage #60

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "underscore-template-loader": "^0.6.0",
     "validate.js": "^0.9.0",
     "validator": "^4.5.0",
-    "webpack": "^1.12.13"
+    "webpack": "^1.12.13",
+    "window-or-global": "^1.0.1"
   },
   "scripts": {
     "debug": "node debug app.js",
