--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^0.8.5",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
+    "inert": "^3.2.0",
     "jquery": "^2.2.0",
     "jsonwebtoken": "^5.5.4",
     "lodash": "^4.1.0",
