--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "proxy": "node proxy.js",
     "build": "webpack",
     "compile": "webpack -p",
+    "c": "npm run compile",
     "watch": "webpack -w",
     "test": "lab -T ./babelcompiler.js -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV "
   },
