--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "compile": "webpack -p",
     "c": "npm run compile",
     "watch": "webpack -w",
-    "test": "lab -T ./babelcompiler.js -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV "
+    "test": "lab -T ./babelcompiler.js -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV ",
+    "lint": "eslint app api models test"
   },
   "main": "app.js",
   "repository": {
