--- a/test/.eslintrc.yaml
+++ b/test/.eslintrc.yaml
@@ -1,7 +1,12 @@
 extends: eslint:recommended
 parserOptions:
   ecmaVersion: 6
+  sourceType: module
+  ecmaFeatures:
+    impliedStrict: yes
 env:
+  browser: yes
+  es6: yes
   node: yes
 rules:
   no-console: 0
