--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -15,6 +15,7 @@
     "require": false
   },
   "rules": {
-    "no-console": [2, {"allow": ["warn", "error"]}]
+    "no-console": [2, {"allow": ["warn", "error"]}],
+    "semi": [2, "always"]
   }
 }
