--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,14 @@ deployment:
   production:
     branch: master
     commands:
+      - npm i -g gulp --no-progress
+      - git clone https://github.com/marionettejs/backbone.marionette.git ../mn
+      - cd ../mn
+      - git fetch origin next/next
+      - git checkout next
+      - npm i --no-progress
+      - gulp build
+      - cd ../reps-js
+      - npm i ../mn --no-progress
       - npm run c
       - /bin/bash deployment/send_to_s3.sh
