Moved to Karma runner on client
Moved the client tests over to Karma so we can test in-browser more
easily. I was running into the issue where testing network+DOM was
becoming a nightmare so this should resolve that.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "compile": "webpack -p",
     "c": "npm run compile",
     "watch": "webpack -w",
-    "test": "lab -T ./babelcompiler.js -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV ",
+    "test:server": "lab -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV test/api/*",
+    "test:client": "karma start --single-run",
+    "test": "npm run test:server && npm run test:client",
     "createdb": "sudo -u postgres createuser -PRd workouts &&sudo -u postgres createdb -O workouts -T template0 -E UTF8 workouts",
     "lint": "eslint app api models test"
   },
@@ -57,10 +59,20 @@
     "bluebird": "^3.2.2",
     "code": "^2.1.0",
     "eslint": "^2.4.0",
+    "expect.js": "^0.3.1",
     "http-proxy": "^1.13.1",
     "http-server": "^0.8.5",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon": "^1.0.4",
+    "karma-webpack": "^1.7.0",
     "lab": "^8.2.0",
+    "mocha": "^2.4.5",
     "mock-browser": "^0.92.11",
+    "phantomjs-prebuilt": "^2.1.7",
     "sequelize-fixtures": "^0.4.8",
     "shot": "^3.0.0",
     "sinon": "^1.17.3"
