--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "watch": "webpack -w",
     "test:server": "lab -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV test/api/*",
     "test:client": "karma start --single-run",
-    "test": "npm run test:server && npm run test:client",
+    "test": "npm run test:server && karma start --single-run --reporters xml && mv test-results.testxml $CIRCLE_TEST_REPORTS/test-results.testxml",
     "createdb": "sudo -u postgres createuser -PRd workouts &&sudo -u postgres createdb -O workouts -T template0 -E UTF8 workouts",
     "lint": "eslint app api models test"
   },
@@ -69,6 +69,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon": "^1.0.4",
     "karma-webpack": "^1.7.0",
+    "karma-xml-reporter": "^0.1.4",
     "lab": "^8.2.0",
     "mocha": "^2.4.5",
     "mock-browser": "^0.92.11",
