--- a/circle.yml
+++ b/circle.yml
@@ -4,8 +4,9 @@ machine:
   node:
     version: 5.7.0
 test:
-  override:
-    - npm test
+  post:
+    - npm run test:client:ci
+    - mv test-results.testxml $CIRCLE_TEST_REPORTS/test-results.testxml
     - npm run lint
 
 deployment:
