--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "description": "A web app for tracking workouts, reps, weights etc",
   "keywords": [],
   "dependencies": {
-    "backbone": "^1.2.3",
+    "backbone": "^1.3.2",
     "backbone.babysitter": "^0.1.10",
     "backbone.localstorage": "^1.1.16",
+    "backbone.marionette": "git+https://github.com/marionettejs/backbone.marionette.git#v3.0.0-pre.2",
     "backbone.radio": "^1.0.2",
     "backbone.syphon": "^0.6.3",
     "bcrypt": "^0.8.5",
