Start setting up the UI #94

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "backbone.babysitter": "^0.1.10",
     "backbone.localstorage": "^1.1.16",
     "backbone.marionette": "git+https://github.com/marionettejs/backbone.marionette.git#v3.0.0-pre.2",
-    "backbone.radio": "^1.0.2",
+    "backbone.radio": "^1.0.4",
     "backbone.syphon": "^0.6.3",
     "bcrypt": "^0.8.5",
     "hapi": "^12.0.1",
@@ -22,7 +22,7 @@
     "pg": "^4.4.3",
     "sequelize": "^3.17.1",
     "sequelize-cli": "^2.3.0",
-    "underscore": "1.8.3",
+    "underscore": "^1.8.3",
     "underscore-template-loader": "^0.6.0",
     "validate.js": "^0.9.0",
     "validator": "^4.5.0",
