Use JUnit reporter for CI tests

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "watch": "webpack -w",
     "test:server": "lab -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV test/api/*",
     "test:client": "karma start --single-run",
-    "test:client:ci": "karma start --single-run --reporters xml",
+    "test:client:ci": "karma start --single-run --reporters junit",
     "test": "npm run test:server",
     "createdb": "sudo -u postgres createuser -PRd workouts &&sudo -u postgres createdb -O workouts -T template0 -E UTF8 workouts",
     "lint": "eslint app api models test"
@@ -67,11 +67,11 @@
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-firefox-launcher": "^0.1.7",
+    "karma-junit-reporter": "^0.4.1",
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon": "^1.0.4",
     "karma-webpack": "^1.7.0",
-    "karma-xml-reporter": "^0.1.4",
     "lab": "^8.2.0",
     "mocha": "^2.4.5",
     "mock-browser": "^0.92.11",
