--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bcrypt": "^0.8.5",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
+    "icecreambar": "^3.1.0",
     "inert": "^3.2.0",
     "jquery": "^2.2.0",
     "jsonwebtoken": "^5.5.4",
     "lodash": "^4.1.0",
     "moment": "^2.11.2",
     "pg": "^4.4.3",
+    "rollbar": "^0.6.0",
     "sequelize": "^3.17.1",
     "sequelize-cli": "^2.3.0",
     "underscore": "^1.8.3",
