--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "backbone.radio": "^1.0.4",
     "backbone.syphon": "^0.6.3",
     "bcrypt": "^0.8.5",
+    "googleapis": "^10.0.0",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
     "icecreambar": "^3.1.0",
