--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "description": "A web app for tracking workouts, reps, weights etc",
   "keywords": [],
   "dependencies": {
-    "backbone": "^1.3.2",
-    "backbone.babysitter": "^0.1.11",
+    "backbone": "1.3.2",
+    "backbone.babysitter": "^1.0.0-pre.1",
     "backbone.localstorage": "^1.1.16",
-    "backbone.marionette": "git+https://github.com/marionettejs/backbone.marionette.git#v3.0.0-pre.2",
+    "backbone.marionette": "git+https://github.com/marionettejs/backbone.marionette.git#v3.0.0-pre.4",
     "backbone.paginator": "^2.0.5",
-    "backbone.radio": "^1.0.4",
+    "backbone.radio": "^2.0.0-pre.1",
     "backbone.syphon": "^0.6.3",
     "bcrypt": "^0.8.5",
     "googleapis": "^10.0.0",
@@ -23,6 +23,7 @@
     "lodash": "^4.1.0",
     "moment": "^2.11.2",
     "pg": "^4.4.3",
+    "request": "^2.6.0",
     "rollbar": "^0.6.0",
     "sequelize": "^3.17.1",
     "sequelize-cli": "^2.3.0",
@@ -47,7 +48,7 @@
     "test:server": "lab -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV test/api/*",
     "test:client": "karma start --single-run",
     "test:client:ci": "karma start --single-run --reporters junit",
-    "test": "npm run test:server",
+    "test": "snyk test && npm run test:server",
     "createdb": "sudo -u postgres createuser -PRd workouts &&sudo -u postgres createdb -O workouts -T template0 -E UTF8 workouts",
     "lint": "eslint app api models test"
   },
@@ -82,6 +83,7 @@
     "phantomjs-prebuilt": "^2.1.7",
     "sequelize-fixtures": "^0.4.8",
     "shot": "^3.0.0",
-    "sinon": "^1.17.3"
+    "sinon": "^1.17.3",
+    "snyk": "^1.16.0"
   }
 }
