--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sequelize-cli": "^2.3.0",
     "underscore": "^1.8.3",
     "underscore-template-loader": "^0.6.0",
+    "uuid": "^2.0.2",
     "validate.js": "^0.9.0",
     "validator": "^4.5.0",
     "webpack": "^1.12.13",
