Speculative changes experimenting with the Fit API

--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,7 @@
     "password": "password",
     "database": "workouts",
     "host": "127.0.0.1",
-    "dialect": "postgres",
-    "logging": false
+    "dialect": "postgres"
   },
   "test": {
     "username": "scott",
