--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "backbone.radio": "^2.0.0-pre.1",
     "backbone.syphon": "^0.6.3",
     "bcrypt": "^0.8.5",
+    "bulma": "^0.1.2",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "googleapis": "^12.1.0",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
@@ -22,11 +25,14 @@
     "jsonwebtoken": "^5.5.4",
     "lodash": "^4.1.0",
     "moment": "^2.11.2",
+    "node-sass": "^3.8.0",
     "pg": "^4.4.3",
     "request": "^2.74.0",
     "rollbar": "^0.6.0",
+    "sass-loader": "^4.0.0",
     "sequelize": "^3.17.1",
     "sequelize-cli": "^2.3.0",
+    "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
     "underscore-template-loader": "^0.6.0",
     "validate.js": "^0.9.0",
