--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "description": "A web app for tracking workouts, reps, weights etc",
   "keywords": [],
   "dependencies": {
-    "backbone": "1.3.2",
-    "backbone.babysitter": "^1.0.0-pre.1",
+    "backbone": "1.3.3",
     "backbone.localstorage": "^1.1.16",
-    "backbone.marionette": "git+https://github.com/marionettejs/backbone.marionette.git#v3.0.0-pre.4",
+    "backbone.marionette": "3.0.0-pre.5",
     "backbone.paginator": "^2.0.5",
-    "backbone.radio": "^2.0.0-pre.1",
+    "backbone.radio": "^2.0.0-pre.2",
     "backbone.syphon": "^0.6.3",
     "bcrypt": "^0.8.5",
     "googleapis": "^12.1.0",
@@ -27,7 +26,7 @@
     "rollbar": "^0.6.0",
     "sequelize": "^3.17.1",
     "sequelize-cli": "^2.3.0",
-    "underscore": "^1.8.3",
+    "underscore": "1.8.3",
     "underscore-template-loader": "^0.6.0",
     "validate.js": "^0.9.0",
     "validator": "^4.5.0",
@@ -64,9 +63,13 @@
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "bluebird": "^3.2.2",
+    "bootstrap-sass": "^3.3.7",
+    "bricks.js": "^1.7.0",
     "code": "^2.1.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
     "expect.js": "^0.3.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "http-proxy": "^1.13.1",
     "http-server": "^0.8.5",
     "karma": "^0.13.22",
@@ -80,11 +83,14 @@
     "lab": "^8.2.0",
     "mocha": "^2.4.5",
     "mock-browser": "^0.92.11",
+    "node-sass": "^3.8.0",
     "phantomjs-prebuilt": "^2.1.7",
     "query-string": "^4.2.2",
+    "sass-loader": "^4.0.0",
     "sequelize-fixtures": "^0.4.8",
     "shot": "^3.0.0",
     "sinon": "^1.17.3",
-    "snyk": "^1.16.0"
+    "snyk": "^1.16.0",
+    "style-loader": "^0.13.1"
   }
 }
