--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "description": "A web app for tracking workouts, reps, weights etc",
   "keywords": [],
   "dependencies": {
-    "backbone": "1.3.2",
-    "backbone.babysitter": "^1.0.0-pre.1",
+    "backbone": "1.3.3",
     "backbone.localstorage": "^1.1.16",
-    "backbone.marionette": "git+https://github.com/marionettejs/backbone.marionette.git#v3.0.0-pre.4",
+    "backbone.marionette": "^3.0.0",
     "backbone.paginator": "^2.0.5",
-    "backbone.radio": "^2.0.0-pre.1",
+    "backbone.radio": "^2.0.0",
     "backbone.syphon": "^0.6.3",
     "bcrypt": "^0.8.5",
-    "googleapis": "^10.0.0",
+    "googleapis": "^12.1.0",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
     "icecreambar": "^3.1.0",
