--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "migrate": "sequelize db:migrate",
     "fulltest": "sequelize db:migrate && lab",
     "serveassets": "http-server ./assets",
-    "proxy": "node proxy.js",
     "build": "webpack",
     "compile": "webpack -p",
     "c": "npm run compile",
@@ -48,7 +47,7 @@
     "test:server": "lab -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV test/api/*",
     "test:client": "karma start --single-run",
     "test:client:ci": "karma start --single-run --reporters junit",
-    "test": "snyk test && npm run test:server",
+    "test": "npm run test:server",
     "createdb": "sudo -u postgres createuser -PRd workouts &&sudo -u postgres createdb -O workouts -T template0 -E UTF8 workouts",
     "lint": "eslint app api models test"
   },
