--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "compile": "webpack -p",
     "c": "npm run compile",
     "watch": "webpack -w",
-    "test:server": "lab -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV test/api/*",
+    "test:server": "lab -I window,localStorage,location,Reflect,__core-js_shared__ -e $NODE_ENV test/api/*",
     "test:client": "karma start --single-run",
     "test:client:ci": "karma start --single-run --reporters junit",
     "test": "npm run test:server",
