Stringify and parse the token #119

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "icecreambar": "^3.1.0",
     "inert": "^3.2.0",
     "jquery": "^2.2.0",
+    "json-parse": "^1.0.3",
+    "json-stringify": "^1.0.0",
     "jsonwebtoken": "^5.5.4",
     "lodash": "^4.1.0",
     "moment": "^2.11.2",
