Updated packages for snyk

--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
     "backbone.marionette": "^3.0.0",
     "backbone.paginator": "^2.0.5",
     "backbone.radio": "^2.0.0",
-    "backbone.syphon": "^0.6.3",
+    "backbone.syphon": "^0.7.0",
     "bcrypt": "^0.8.5",
-    "googleapis": "^12.1.0",
+    "googleapis": "^12.4.0",
     "hapi": "^12.0.1",
     "hapi-auth-jwt2": "^5.3.2",
     "icecreambar": "^3.1.0",
-    "inert": "^3.2.0",
-    "jquery": "^2.2.0",
+    "inert": "^3.2.1",
+    "jquery": "^3.0.0",
     "json-parse": "^1.0.3",
     "json-stringify": "^1.0.0",
     "jsonwebtoken": "^5.5.4",
     "lodash": "^4.1.0",
-    "moment": "^2.11.2",
+    "moment": "^2.15.2",
     "pg": "^4.4.3",
     "request": "^2.74.0",
     "rollbar": "^0.6.0",
-    "sequelize": "^3.23.6",
-    "sequelize-cli": "^2.3.0",
+    "sequelize": "^3.24.3",
+    "sequelize-cli": "^2.4.0",
     "underscore": "^1.8.3",
     "underscore-template-loader": "^0.6.0",
     "uuid": "^2.0.2",
@@ -49,7 +49,7 @@
     "test:server": "lab -I window,localStorage,location,Reflect,__core-js_shared__ -e $NODE_ENV test/api/*",
     "test:client": "karma start --single-run",
     "test:client:ci": "karma start --single-run --reporters junit",
-    "test": "npm run test:server",
+    "test": "snyk test && npm run test:server",
     "createdb": "sudo -u postgres createuser -PRd workouts &&sudo -u postgres createdb -O workouts -T template0 -E UTF8 workouts",
     "lint": "eslint app api models test"
   },
