--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "keywords": [],
   "dependencies": {
     "backbone": "1.3.3",
-    "backbone.localstorage": "^1.1.16",
+    "backbone.local": "0.0.4",
     "backbone.marionette": "^3.0.0",
     "backbone.paginator": "^2.0.5",
     "backbone.radio": "^2.0.0",
